bug collapse

--- a/frontend/web/css/main.css
+++ b/frontend/web/css/main.css
@@ -53,6 +53,7 @@ html,body {
     background-color: #f5f5f5;
     padding: 15px 10px;
     width: 100%;
+    height: 100%;
 }
 
 .pasar .card .card-body{
